// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VenueBody should match snapshot (default) 1`] = `
<MetaListBody
  local={
    Object {
      "handleScroll": [MockFunction],
      "header": <div
        className="c-list-body__header--venues"
      >
        <h1>
          Venues
        </h1>
        <a
          href="https://www.yelp.com/"
        >
          <img
            alt="Yelp Logo"
            className="c-list-body__logo"
            src="/nightlife-app/media/yelp-logo.png"
          />
        </a>
      </div>,
      "list": Array [],
      "placeholder": "No Venues",
    }
  }
/>
`;

exports[`VenueBody should match snapshot (list) 1`] = `
<MetaListBody
  local={
    Object {
      "handleScroll": [MockFunction],
      "header": <div
        className="c-list-body__header--venues"
      >
        <h1>
          Venues
        </h1>
        <a
          href="https://www.yelp.com/"
        >
          <img
            alt="Yelp Logo"
            className="c-list-body__logo"
            src="/nightlife-app/media/yelp-logo.png"
          />
        </a>
      </div>,
      "list": Array [
        <VenueItem
          local={
            Object {
              "venue": Object {
                "coordinates": Object {
                  "latitude": 0,
                  "longitude": 0,
                },
                "display_phone": "",
                "distance": 0,
                "favorites": Array [],
                "hours": Array [],
                "id": "",
                "image_url": "",
                "location": Object {
                  "display_address": Array [],
                },
                "name": "",
                "photos": Array [],
                "rating": 0,
                "rsvps": Array [],
                "url": "",
              },
            }
          }
        />,
      ],
      "placeholder": "No Venues",
    }
  }
/>
`;
